Let transform message be the value and use id as  key in tagdic. Add error warning if parameter or actice tags are not define correct.

--- a/launch/config/pozyx_bridge_config.yaml
+++ b/launch/config/pozyx_bridge_config.yaml
@@ -1,20 +1,20 @@
 frame_id: "world"
-tag_list: ["tag1", "tag2", "tag3", "tag4" ]
+tag_list: ["tag1","tag2"]
 tag1:
   name: "tag1"
   child_frame_id: "pozyx/tag1"
-  id: 7762
-  
+  id: 7761
+
 tag2:
   name: "tag2"
   child_frame_id: "pozyx/tag2"
-  id: 7546
+  id: 7541
   
 #tag3:
 #  name: "tag2"
 #  child_frame_id: "pozyx/tag3"
 #  id: 0000
-#
+
 #tag4:
 #  name: "tag2"
 #  child_frame_id: "pozyx/tag4"
