--- a/launch/config/pozyx_bridge_config.yaml
+++ b/launch/config/pozyx_bridge_config.yaml
@@ -3,8 +3,8 @@ tag_list: ["tag1","robot2","Master_tag"]
 tag1:
   id: 7762
 
-robot2:
-  id: 7546
+#robot2:
+#  id: 7587
   
 Master_tag:
   id: 30208
