--- a/pozyx_bridge/CMakeLists.txt
+++ b/pozyx_bridge/CMakeLists.txt
@@ -11,8 +11,6 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  message_generation
-  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -49,11 +47,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  UwbTransformStamped.msg
-  UwbTransformStampedArray.msg
-)
+# add_message_files(
+#   FILES
+#   UwbTransformStamped.msg
+#   UwbTransformStampedArray.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -70,12 +68,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
-
-)
+# generate_messages(
+#    DEPENDENCIES
+#    std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -108,8 +104,8 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   #INCLUDE_DIRS include
-  LIBRARIES uwb_kit
-  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+  # LIBRARIES uwb_kit
+  CATKIN_DEPENDS roscpp rospy std_msgs
 )
 
 ###########
