--- a/pozyx_msgs/CMakeLists.txt
+++ b/pozyx_msgs/CMakeLists.txt
@@ -10,7 +10,9 @@ project(pozyx_msgs)
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   rospy
+  roscpp
   std_msgs
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,11 +49,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  UwbTransformStamped.msg
+  UwbTransformStampedArray.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -105,7 +107,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pozyx_msgs
-#  CATKIN_DEPENDS geometry_msgs rospy std_msgs
+    CATKIN_DEPENDS geometry_msgs rospy std_msgs message_runtime
 #  DEPENDS system_lib
 )
 
