--- a/pozyx_msgs/CMakeLists.txt
+++ b/pozyx_msgs/CMakeLists.txt
@@ -9,8 +9,8 @@ project(pozyx_msgs)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
-  rospy
   roscpp
+  rospy
   std_msgs
   message_generation
 )
@@ -49,11 +49,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  UwbTransformStamped.msg
-  UwbTransformStampedArray.msg
-)
+ add_message_files(
+   FILES
+   UwbTransformStamped.msg
+   #UwbTransformStampedArray.msg
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -70,10 +70,11 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   std_msgs
-# )
+generate_messages(
+   DEPENDENCIES
+   geometry_msgs
+   std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -107,8 +108,9 @@ add_message_files(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pozyx_msgs
-    CATKIN_DEPENDS geometry_msgs rospy std_msgs message_runtime
+#  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
+   CATKIN_DEPENDS message_runtime
 )
 
 ###########
